8291599: Assertion in PhaseIdealLoop::skeleton_predicate_has_opaque after JDK-8289127

Backport-of: 37df5f56259429482cfdbe38e8b6256f1efaf9e8