src/hotspot/share/opto/split_if.cpp
@@ -200,7 +200,7 @@ bool PhaseIdealLoop::split_up( Node *n, Node *blk1, Node *blk2 ) {
       return true;
     }
   }
-  if (n->Opcode() == Op_OpaqueLoopStride || n->Opcode() == Op_OpaqueLoopInit) {
+  if (subgraph_has_opaque(n)) {
     Unique_Node_List wq;
     wq.push(n);
     for (uint i = 0; i < wq.size(); i++) {
